[package]
name = "parse_sheet_from_weixin"
version = "1.0.0"
edition = "2021"

[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.75"
json = "0.12.4"
log = "0.4.17"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
reqwest  = "0.12.9"
scraper = "0.22.0"
thirtyfour = "0.35.0"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
