[package]
name = "parse_sheet_from_weixin"
version = "1.0.0"
edition = "2021"

[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
json = "0.12.4"
log = "0.4.29"
pretty_env_logger = "0.5.0"
regex = "1.12.2"
reqwest  = "0.12.26"
scraper = "0.25.0"
thirtyfour = "0.36.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
